Updated img and css.

--- a/contact.html
+++ b/contact.html
@@ -42,20 +42,23 @@
         </nav>
     </header>
 
-    <section class="contact">
-        <h2>Contact</h2>
+    <div class="contact_wrapper"> 
+        <section class="contact">
+            <div class="contact_info">
+                <h2>Contact</h2>
 
-        <p>
-            You want to know something?
-        </p>
+                <p>
+                    You want to know something?
+                </p>
 
-        <p>
-            Get in touch!
-        </p>
+                <p>
+                    Get in touch!
+                </p>
 
-        <h3>Mail: tommykay16@gmail.com</h3>
-    
-    </section>
+                <h3>Mail: tommykay16@gmail.com</h3>
+            </div>
+        </section>
+    </div>
 
     <!-- Footer with socials -->
     <footer>
